tests/agl/rejections/scope/break_in_def_no_loop.agl
def count() -> int =
  break
count()
